fix(design): increase base font size on mobile

--- a/resources/less/system/_base.less
+++ b/resources/less/system/_base.less
@@ -6,7 +6,7 @@ html {
   line-height: var(--line-height-default);
 
   @media (max-width: @breakpoint-xs) {
-    font-size: 90%;
+    font-size: 95%;
   }
 }
 
